--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     <header>
         <h1 class="titulo">Airon Bautista <span>Freelancer</span></h1>
     </header>
-    <nav>
+    <div class="nav-bg">
+    <nav class="navegacion-principal contenedor">
         <a href="#">Inicio</a>
         <a href="#">Sobre Mi</a>
         <a href="#">Clientes</a>
         <a href="#">Contacto</a>
     </nav>
-
+    </div>
     
-    <section>
+    <section class="hero">
+        <div class="contenido-hero">
         <h2 class="titulo">Diseño y desarrollo web freelancer</h2>
         <p>
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="60" height="60" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffec00" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -34,11 +36,14 @@
               </svg>
         </p>
         <p>San Salvador, el Salvador</p>
+        <a href="#">Contacto</a>
+    </div>
         <h2>Mis servicios</h2>
     </section>
     <main>
     <section>
-        <h3>Diseño web</h3>
+        <h3><P>Diseño web  </P></h3>
+  
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <path d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
@@ -50,6 +55,7 @@
                 Toda empresa ya sea grande, mediana o pequeña necesita y debe tener
             </p>
         <h3>Aplicaciones Moviles</h3>
+        
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-android" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
             <line x1="4" y1="10" x2="4" y2="16" />
