--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                  <p>
                 Toda empresa ya sea grande, mediana o pequeña necesita y debe tener
                 </p>
+             </section>
+             <section>
             <h3>Aplicaciones Moviles</h3>
         
               <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-android" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -80,6 +82,8 @@
                  <p>
                 Somos altamente competentes en la ingeniería de aplicaciones móviles 
                 </P>
+            </section>
+            <section>
             <h3>e-commerce</h3>
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-credit-card" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -90,9 +94,9 @@
                  </svg>
                  <p>
                 Un sistema de compra y venta de productos y servicios que utiliza Internet 
-                </p>
+                 </p>
             </section>
-        </div><!--aca cerramos la clase de servicios-->>
+        </div><!--aca cerramos la clase de servicios-->
     </main>
         <section>
             <h2>Contacto</h2>
