--- a/index.html
+++ b/index.html
@@ -105,29 +105,35 @@
         <section>
             <h2>Contacto</h2>
 
-            <form>
+            <form class="formulario">
                 <fieldset>
                     <legend>contactanos llenando los campos</legend>
-                    <div>     
+                <div class="contenedor-campos">
+                     <div class="campo">     
                     <label>Nombre:</label>
                     <input type="text" placeholder="Tu nombre">
                     </div>
-                    <div>
+                    <div class="campo">
                     <label>Teléfono</label>
                     <input type="tel" placeholder="Tu Teléfono">
                     </div>
-                    <div>
+                    <div class="campo">
                     <label>Correo</label>
                     <input type="email" placeholder="Tu e-Mail">
                     </div>
-                    <div>
+                    <div class="campo">
                     <label>Mensaje</label>
                     <textarea></textarea>
                     </div>
-                    <div>
-                    <input type="submit" value="enviar">
-                    </div>
-                </fieldset>
+                    <div class="campo">
+                </div>
+                   
+                
+                </div>
+                <div class="enviar">
+                <input type="submit" value="enviar" class="boton">
+            </div>
+            </fieldset>
             </form>
         </section>
             <p>Todos los derechos reservados Airon Bautista Freelancer</p>
