--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 </p>
             </section>
         </div><!--aca cerramos la clase de servicios-->
-    </main>
+    
     <section>
         <h2>Contacto</h2>
 
@@ -136,20 +136,23 @@
                     </div>
                     <div class="campo">
                         <label>Mensaje</label>
-                        <textarea></textarea>
+                        <textarea class="input-text"></textarea>
                     </div>
                     <div class="campo">
                     </div>
 
 
                 </div>
-                <div class="enviar">
-                    <input class="button" type="submit" value="enviar" class="boton">
+                <div class="alinear-derecha flex">
+                    <input class="button w-100" type="submit" value="enviar" class="boton">
                 </div>
             </fieldset>
         </form>
     </section>
+</main>
+    <footer class="footer">
     <p>Todos los derechos reservados Airon Bautista Freelancer</p>
+</footer>
 </body>
 
 </html>
