--- a/index.html
+++ b/index.html
@@ -118,21 +118,21 @@
     <section>
         <h2>Contacto</h2>
 
-        <form class="formulario">
+        <form class="formulario" action="https://formsubmit.co/d17ex02@outlook.es" method="POST">
             <fieldset>
                 <legend>contactanos llenando los campos</legend>
                 <div class="contenedor-campos">
                     <div class="campo">
                         <label>Nombre:</label>
-                        <input class="input-text" type="text" placeholder="Tu nombre">
+                        <input class="input-text" type="text" placeholder="Tu nombre" name="nombre">
                     </div>
                     <div class="campo">
                         <label>Teléfono</label>
-                        <input class="input-text" type="tel" placeholder="Tu Teléfono">
+                        <input class="input-text" type="tel" placeholder="Tu Teléfono" name="telefono">
                     </div>
                     <div class="campo">
                         <label>Correo</label>
-                        <input class="input-text" type="email" placeholder="Tu e-Mail">
+                        <input class="input-text" type="email" placeholder="Tu e-Mail" name="email">
                     </div>
                     <div class="campo">
                         <label>Mensaje</label>
