--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <section>
         <h2>Contacto</h2>
 
-        <form class="formulario" action="https://formsubmit.co/d17ex02@outlook.es" method="POST">
+        <form class="formulario" action="https://formsubmit.co/5de649e539112f80ebd42a5d5e5fad3f" method="POST">
             <fieldset>
                 <legend>contactanos llenando los campos</legend>
                 <div class="contenedor-campos">
@@ -136,7 +136,7 @@
                     </div>
                     <div class="campo">
                         <label>Mensaje</label>
-                        <textarea class="input-text"></textarea>
+                        <textarea class="input-text" name="mensaje"></textarea>
                     </div>
                     <div class="campo">
                     </div>
